@@ -1,5 +1,3 @@
-
-
 class Manager::WelcomeController < Manager::ManagerController
 
   def home
