@@ -1,6 +1,5 @@
 
 %hr
-
 .row.footer-main
   .large-12.columns
     = render 'application/login_register'
