@@ -4,6 +4,8 @@
     %h1
       = t('galleries.edit')
       = link_to @gallery.name, manager_gallery_path( @gallery )
+      (#{@gallery.photos.count})
     
 = render 'manager/galleries/form', :gallery => @gallery, :url => manager_gallery_path( @gallery )
+= render 'manager/galleries/thumbs', :gallery => @gallery
 = render 'manager/photos/multinew', :gallery => @gallery
