@@ -6,3 +6,18 @@
       %ul{ :id => 'photos', :class => 'thumbnails', 'data-json-url' => manager_j_gallery_path( gallery.id ) }
       %input{ :id => 'fileupload', :type => 'file', :name => 'photo[photo]', 'data-url' => manager_photos_multiadd_path( gallery.galleryname ), :multiple => '' }
       
+%script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"}
+%script{:src => "/js/jquery.ui.widget.js"}
+%script{:src => "/js/jquery.iframe-transport.js"}
+%script{:src => "/js/jquery.fileupload.js"}
+:javascript
+  $(function () {
+      $('#fileupload').fileupload({
+          dataType: 'json',
+          done: function (e, data) {
+              $.each(data.result.files, function (index, file) {
+                  $('<p/>').text(file.name).appendTo(document.body);
+              });
+          }
+      });
+  });
