@@ -6,3 +6,4 @@
 0.0.2 - bugfixes. Being able to manage tgm
         editing newsitems touches site
         lets create new gallery in manager
+        adding photos in manager to a gallery
